[gd_scene load_steps=8 format=3 uid="uid://c65iqx1wq30oe"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_4aq84"]
[ext_resource type="Theme" uid="uid://bwqpp28mqjpgu" path="res://theme.tres" id="2_2h5xy"]
[ext_resource type="Texture2D" uid="uid://dcdwnlegik3" path="res://assets/images/UI/bg_2.png" id="3_mskwr"]

[sub_resource type="Animation" id="Animation_36qgh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/bg/visibility_toggler:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_n1hdc"]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/bg/visibility_toggler:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fne6f"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/bg/visibility_toggler:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7wdr"]
_data = {
"RESET": SubResource("Animation_36qgh"),
"hide": SubResource("Animation_n1hdc"),
"show": SubResource("Animation_fne6f")
}

[node name="MAIN" type="Node"]
process_mode = 3
script = ExtResource("1_4aq84")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_2h5xy")

[node name="bg" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mskwr")
expand_mode = 1
stretch_mode = 6

[node name="visibility_toggler" type="Control" parent="UI/bg"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchor_left = 0.0208333
anchor_top = 0.037037
anchor_right = 0.979167
anchor_bottom = 0.962963
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="title" type="Label" parent="UI/bg/visibility_toggler"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.012037
anchor_right = 1.0
anchor_bottom = 0.127778
offset_bottom = -1.52588e-05
grow_horizontal = 2
theme_override_font_sizes/font_size = 91
text = "Жизнь почтальона"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="button_list" type="VBoxContainer" parent="UI/bg/visibility_toggler"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -500.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(250, 250)
theme_override_constants/separation = 20
alignment = 2

[node name="btn_continue" type="Button" parent="UI/bg/visibility_toggler/button_list"]
visible = false
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme = ExtResource("2_2h5xy")
theme_override_font_sizes/font_size = 60
text = "Продолжить"

[node name="btn_new_game" type="Button" parent="UI/bg/visibility_toggler/button_list"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme = ExtResource("2_2h5xy")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Новая игра"

[node name="btn_settings" type="Button" parent="UI/bg/visibility_toggler/button_list"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme = ExtResource("2_2h5xy")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Настройки"

[node name="btn_exit" type="Button" parent="UI/bg/visibility_toggler/button_list"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme = ExtResource("2_2h5xy")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Выход"

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s7wdr")
}

[connection signal="pressed" from="UI/bg/visibility_toggler/button_list/btn_continue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="UI/bg/visibility_toggler/button_list/btn_new_game" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="UI/bg/visibility_toggler/button_list/btn_settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="UI/bg/visibility_toggler/button_list/btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
